--- a/conf/httpd.conf.d/httpd.admin.tt.example
+++ b/conf/httpd.conf.d/httpd.admin.tt.example
@@ -168,15 +168,27 @@ SSLRandomSeed connect file:/dev/urandom 1024
 [% IF apache_version == "2.4" %]
 SSLSessionCache shmcb:[% install_dir %]/var/ssl_acache(512000)
 Mutex file:[% install_dir %]/var/ssl_mutex ssl-cache
+# SUGGESTED CIPHERLIST
+# TLSv1.2 enforcement. No SSLv3, No SSLv2, NO SSLv1, No TLSv1.0, No TLSv1.1.
+# Problem: Internet explorer 8-10 will probably throw at you "Internet Explorer cannot display the webpage" when attempting to access the admin interface while httpd.admin is confirmed to be  running. 
+# Solution: TLSv1.2 needs to be activated. In internet Explorer: Click Tools, Internet Options, Advanced and make sure that TLS v1.2 is enabled under the security section. Retry.
 # apache 2.4.6 | modern profile | OpenSSL 1.0.1e | https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=apache-2.4.6&openssl=1.0.1e&hsts=no&profile=modern
 #Oldest compatible clients: Firefox 27, Chrome 30, IE 11 on Windows 7, Edge, Opera 17, Safari 9, Android 5.0, and Java 8
 SSLProtocol             all -SSLv3 -TLSv1 -TLSv1.1
 SSLCipherSuite          ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
-SSLHonorCipherOrder     on
 SSLCompression          off
-
+# 
+# VULNERABLE CONFIGURATION. PLEASE REFER HERE: https://wiki.mozilla.org/Security/Server_Side_TLS
+# YOU SHOULD PREFER TO UPGRADE AND DO CONFIGURATION CHANGES ON BROWSERS INSTEAD OF COMMENTING OUT PREVIOUS SECTION AND UNCOMMENT THIS ONE.
+# Apache 2.4.6 | intermediate profile | OpenSSL 1.0.1e | link
+#Oldest compatible clients: Firefox 1, Chrome 1, IE 7, Opera 5, Safari 1, Windows XP IE8, Android 2.3, Java 7
+#SSLProtocol             all -SSLv3
+#SSLCipherSuite          ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS
+#SSLCompression          off
 
 # OCSP Stapling, only in httpd 2.3.3 and later
+# https://wiki.mozilla.org/Security/Server_Side_TLS#OCSP_Stapling
+# "The server will send a cached OCSP response only if the client requests it, by announcing support for the status_request TLS extension in its CLIENT HELLO."
 SSLUseStapling          on
 SSLStaplingResponderTimeout 5
 SSLStaplingReturnResponderErrors off
