missing renaming of device_registration params

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -555,7 +555,7 @@ description=<<EOT
 Comma-delimited list of port used by proxy interception.
 EOT
 
-[device_registration.activation]
+[device_registration.status]
 type=toggle
 options=enabled|disabled
 description=<<EOT
