X-Frame-Options SAMEORIGIN enforced for browsers that supports it.

--- a/conf/httpd.conf.d/httpd.graphite.tt.example
+++ b/conf/httpd.conf.d/httpd.graphite.tt.example
@@ -118,6 +118,8 @@ HostnameLookups off
 MaxRequestsPerChild 1000
 
 Header set X-XSS-Protection "1; mode=block"
+Header always append X-Frame-Options SAMEORIGIN
+
 ErrorLog  [% install_dir %]/logs/[% name %].error
 
 ServerAdmin [% server_admin %]
