--- a/conf/httpd.conf.d/httpd.collector.tt.example
+++ b/conf/httpd.conf.d/httpd.collector.tt.example
@@ -130,6 +130,7 @@ MaxSpareServers  10
 HostnameLookups  off
 MaxRequestsPerChild  1000
 
+Header always append X-Frame-Options SAMEORIGIN
 ErrorLog  [% install_dir %]/logs/[% name %].error
 
 User pf
