--- a/conf/httpd.conf.d/httpd.admin.tt.example
+++ b/conf/httpd.conf.d/httpd.admin.tt.example
@@ -178,7 +178,7 @@ SSLCipherSuite ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-R
 [% END %]
 
 SSLHonorCipherOrder  on
-X-XSS-Protection: 1; mode=block
+Header set X-XSS-Protection "1; mode=block"
 
 ErrorLog  [% install_dir %]/logs/[% name %].error
 
