track admin guide anchors in documentation.conf

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -522,6 +522,7 @@ description=<<EOT
 When enabled, PacketFence uses pfdns if you defined "Passthroughs" or Apache mod-proxy 
 if you defined "Proxy passthroughs" to allow trapped devices to reach web sites.
 EOT
+guide_anchor=_vidange
 
 [fencing.passthroughs]
 type=list
@@ -841,6 +842,9 @@ Defaults to none. email will send an email every hour if the limit's still reach
 shut will shut the port on the switch and will also send an email even if email is not 
 specified.
 EOT
+
+[inline]
+guide_anchor=_technical_introduction_to_inline_enforcement
 
 [inline.accounting]
 type=toggle
@@ -1314,6 +1318,9 @@ type=text
 description=<<EOT
 OPSWAT Metadefender Cloud Scanner URL for hash queries
 EOT
+
+[parking]
+guide_anchor=_parked_devices
 
 [parking.lease_length]
 type=numeric
