--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Pre-Depends:  ca-certificates,
 Breaks: libdata-alias-perl
 Depends: ${misc:Depends}, vlan,
  openssl, openssl-blacklist, openssl-blacklist-extra,
- mysql-server|mariadb-server|mariadb-galera-server,
+ mariadb-server (>= 10.0.1),
  snmp, snmptrapfmt, snmp-mibs-downloader, conntrack,
 # apache related
  apache2, apache2-utils, libapache2-mod-proxy-html,
