added contextual doc

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -53,6 +53,7 @@ If enabled PacketFence will monitor DHCP option82 location-based
 information. This feature is only available if the dhcpdetector is 
 activated.
 EOT
+guide_anchor=_dhcp_option_82
 
 [network.rogue_dhcp_detection]
 type=toggle
@@ -522,7 +523,7 @@ description=<<EOT
 When enabled, PacketFence uses pfdns if you defined "Passthroughs" or Apache mod-proxy 
 if you defined "Proxy passthroughs" to allow trapped devices to reach web sites.
 EOT
-guide_anchor=_vidange
+guide_anchor=_passthroughs_2
 
 [fencing.passthroughs]
 type=list
@@ -541,6 +542,7 @@ Comma-delimited list of domains to be used with apache passthroughs.
 The configuration parameter "passthrough" must be enabled for passthroughs 
 to be effective.
 EOT
+guide_anchor=_mod_proxy_passthroughs
 
 [fencing.interception_proxy]
 type=toggle
@@ -556,6 +558,9 @@ description=<<EOT
 Comma-delimited list of port used by proxy interception.
 EOT
 
+[device_registration]
+guide_anchor=_devices_registration
+
 [device_registration.status]
 type=toggle
 options=enabled|disabled
@@ -568,6 +573,9 @@ type=role
 description=<<EOT
 The role to assign to devices registered from the specific portal. If none is specified, the role of the registrant is used.
 EOT
+
+[guests_admin_registration]
+guide_anchor=_access_duration
 
 [guests_admin_registration.access_duration_choices]
 type=text_with_editable_default
@@ -786,6 +794,9 @@ type=numeric
 description=<<EOT
 The max_allowed_packet MySQL configuration attribute (in MB). Only change if you know what you are doing. Will only affect a locally running MySQL server.
 EOT
+
+[snmp_traps]
+guide_anchor=_snmp_traps_limit
 
 [snmp_traps.nbtraphandlerthreads]
 type=text
