--- a/conf/httpd.conf.d/httpd.parking.tt.example
+++ b/conf/httpd.conf.d/httpd.parking.tt.example
@@ -123,6 +123,7 @@ DocumentRoot [% install_dir %]/html/parking
 
 DirectoryIndex index.html
 
+Header set X-XSS-Protection "1; mode=block"
 ErrorLog [% install_dir %]/logs/[% name %].error
 
 LogLevel warn
