--- a/conf/log.conf.d/pfqueue.conf.example
+++ b/conf/log.conf.d/pfqueue.conf.example
@@ -1,5 +1,5 @@
 ### pfqueue logger ###
-log4perl.rootLogger = INFO, PFQUEUE
+log4perl.rootLogger = INFO, QUEUE_SYSLOG
 
 ### Categories ###
 # Below, you can specify different categories (based on package names) for different logging levels
@@ -7,46 +7,32 @@ log4perl.rootLogger = INFO, PFQUEUE
 
 ### Fingerbank logger ###
 ## Used to separate Fingerbank logs in a different log file
-log4perl.category.fingerbank = INFO, FINGERBANK
-## Prevent the message from bubbling up to it's parents
+log4perl.category.fingerbank = INFO, QUEUE_FINGERBANK
 log4perl.additivity.fingerbank = 0
 
 ### DHCP processing logger ###
 ## Used to separate the DHCP processing into a different log file
-log4perl.category.pf.dhcp = INFO, DHCP_PROCESSING
+log4perl.category.pf.dhcp = INFO, QUEUE_DHCP
 ## Prevent the message from bubbling up to it's parents
 log4perl.additivity.pf.dhcp = 0
 
 ### Logging for pfqueue
-log4perl.appender.PFQUEUE                              = pf::log::FileAppender
-log4perl.appender.PFQUEUE.filename                     = /usr/local/pf/logs/pfqueue.log
-log4perl.appender.PFQUEUE.syswrite                     = 1
-log4perl.appender.PFQUEUE.mode                         = append
-log4perl.appender.PFQUEUE.layout                       = PatternLayout
-log4perl.appender.PFQUEUE.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.PFQUEUE.umask                        = 0002
-log4perl.appender.PFQUEUE.user                         = pf
-log4perl.appender.PFQUEUE.group                        = pf
-log4perl.appender.PFQUEUE.binmode                      = utf8
+log4perl.appender.QUEUE_SYSLOG                                = Log::Dispatch::Syslog
+log4perl.appender.QUEUE_SYSLOG.ident                          = pfqueue
+log4perl.appender.QUEUE_SYSLOG.facility                       = local5
+log4perl.appender.QUEUE_SYSLOG.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.QUEUE_SYSLOG.layout                         = PatternLayout
 
 ### General Fingerbank log facility configuration ###
-log4perl.appender.FINGERBANK                           = pf::log::FileAppender
-log4perl.appender.FINGERBANK.filename                  = /usr/local/fingerbank/logs/fingerbank.log
-log4perl.appender.FINGERBANK.mode                      = append
-log4perl.appender.FINGERBANK.layout                    = PatternLayout
-log4perl.appender.FINGERBANK.layout.ConversionPattern  = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.FINGERBANK.umask                     = 0002
-log4perl.appender.FINGERBANK.user                      = pf
-log4perl.appender.FINGERBANK.group                     = fingerbank
-log4perl.appender.FINGERBANK.binmode                   = utf8
+log4perl.appender.QUEUE_FINGERBANK                                = Log::Dispatch::Syslog
+log4perl.appender.QUEUE_FINGERBANK.ident                          = fingerbank
+log4perl.appender.QUEUE_FINGERBANK.facility                       = local5
+log4perl.appender.QUEUE_FINGERBANK.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.QUEUE_FINGERBANK.layout                         = PatternLayout
 #
 ### DHCP processing log facility configuration ###
-log4perl.appender.DHCP_PROCESSING                               = pf::log::FileAppender
-log4perl.appender.DHCP_PROCESSING.filename                      = /usr/local/pf/logs/pfdhcplistener.log
-log4perl.appender.DHCP_PROCESSING.mode                          = append
-log4perl.appender.DHCP_PROCESSING.layout                        = PatternLayout
-log4perl.appender.DHCP_PROCESSING.layout.ConversionPattern      = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.DHCP_PROCESSING.umask                         = 0002
-log4perl.appender.DHCP_PROCESSING.user                          = pf
-log4perl.appender.DHCP_PROCESSING.group                         = pf
-log4perl.appender.DHCP_PROCESSING.binmode                       = utf8
+log4perl.appender.QUEUE_DHCP                                = Log::Dispatch::Syslog
+log4perl.appender.QUEUE_DHCP.ident                          = pfdhcplistener
+log4perl.appender.QUEUE_DHCP.facility                       = local5
+log4perl.appender.QUEUE_DHCP.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.QUEUE_DHCP.layout                         = PatternLayout
