--- a/conf/log.conf.d/httpd.webservices.conf.example
+++ b/conf/log.conf.d/httpd.webservices.conf.example
@@ -1,5 +1,6 @@
 ### httpd.webservices logger ###
-log4perl.rootLogger = INFO, HTTPD_WEBSERVICES
+# PFSYSLOG is defined in conf/log.conf
+#log4perl.rootLogger = INFO, PFSYSLOG
 
 ### Categories ###
 # Below, you can specify different categories (based on package names) for different logging levels
@@ -7,48 +8,27 @@ log4perl.rootLogger = INFO, HTTPD_WEBSERVICES
 
 ### Fingerbank logger ###
 ## Used to separate Fingerbank logs in a different log file
-log4perl.category.fingerbank = INFO, FINGERBANK
+log4perl.category.fingerbank = INFO, WEBSERVICES_FINGERBANK
 ## Prevent the message from bubbling up to it's parents
 log4perl.additivity.fingerbank = 0
 
 ### DHCP processing logger ###
 ## Used to separate the DHCP processing into a different log file
-log4perl.category.pf.dhcp = INFO, DHCP_PROCESSING
+log4perl.category.pf.dhcp = INFO, WEBSERVICES_DHCP
 ## Prevent the message from bubbling up to it's parents
 log4perl.additivity.pf.dhcp = 0
 
-### Logging for httpd.webservices
-log4perl.appender.HTTPD_WEBSERVICES                              = pf::log::FileAppender
-# Replace /usr/local/pf/logs/packetfence.log by /usr/local/pf/logs/httpd.webservices.log to allow
-# httpd.webservices to log in its own log file.
-log4perl.appender.HTTPD_WEBSERVICES.filename                     = /usr/local/pf/logs/packetfence.log
-log4perl.appender.HTTPD_WEBSERVICES.syswrite                     = 1
-log4perl.appender.HTTPD_WEBSERVICES.mode                         = append
-log4perl.appender.HTTPD_WEBSERVICES.layout                       = PatternLayout
-log4perl.appender.HTTPD_WEBSERVICES.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.HTTPD_WEBSERVICES.umask                        = 0002
-log4perl.appender.HTTPD_WEBSERVICES.user                         = pf
-log4perl.appender.HTTPD_WEBSERVICES.group                        = pf
-log4perl.appender.HTTPD_WEBSERVICES.binmode                      = utf8
 
 ### General Fingerbank log facility configuration ###
-log4perl.appender.FINGERBANK                               = pf::log::FileAppender
-log4perl.appender.FINGERBANK.filename                      = /usr/local/fingerbank/logs/fingerbank.log
-log4perl.appender.FINGERBANK.mode                          = append
-log4perl.appender.FINGERBANK.layout                        = PatternLayout
-log4perl.appender.FINGERBANK.layout.ConversionPattern      = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.FINGERBANK.umask                         = 0002
-log4perl.appender.FINGERBANK.user                          = pf
-log4perl.appender.FINGERBANK.group                         = fingerbank
-log4perl.appender.FINGERBANK.binmode                       = utf8
+log4perl.appender.WEBSERVICES_FINGERBANK                                = Log::Dispatch::Syslog
+log4perl.appender.WEBSERVICES_FINGERBANK.ident                          = fingerbank
+log4perl.appender.WEBSERVICES_FINGERBANK.facility                       = local5
+log4perl.appender.WEBSERVICES_FINGERBANK.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.WEBSERVICES_FINGERBANK.layout                         = PatternLayout
 
 ### DHCP processing log facility configuration ###
-log4perl.appender.DHCP_PROCESSING                               = pf::log::FileAppender
-log4perl.appender.DHCP_PROCESSING.filename                      = /usr/local/pf/logs/pfdhcplistener.log
-log4perl.appender.DHCP_PROCESSING.mode                          = append
-log4perl.appender.DHCP_PROCESSING.layout                        = PatternLayout
-log4perl.appender.DHCP_PROCESSING.layout.ConversionPattern      = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
-log4perl.appender.DHCP_PROCESSING.umask                         = 0002
-log4perl.appender.DHCP_PROCESSING.user                          = pf
-log4perl.appender.DHCP_PROCESSING.group                         = pf
-log4perl.appender.DHCP_PROCESSING.binmode                       = utf8
+log4perl.appender.WEBSERVICES_DHCP                                = Log::Dispatch::Syslog
+log4perl.appender.WEBSERVICES_DHCP.ident                          = pfdhcplistener
+log4perl.appender.WEBSERVICES_DHCP.facility                       = local5
+log4perl.appender.WEBSERVICES_DHCP.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.WEBSERVICES_DHCP.layout                         = PatternLayout
