--- a/conf/log.conf.d/pffilter.conf.example
+++ b/conf/log.conf.d/pffilter.conf.example
@@ -6,13 +6,8 @@ log4perl.rootLogger = INFO, PFFILTER
 #log4perl.category.pf.SNMP = WARN
 
 ### Logging for pffilter
-log4perl.appender.PFFILTER                              = pf::log::FileAppender
-log4perl.appender.PFFILTER.filename                     = /usr/local/pf/logs/pffilter.log
-log4perl.appender.PFFILTER.syswrite                     = 1
-log4perl.appender.PFFILTER.mode                         = append
-log4perl.appender.PFFILTER.layout                       = PatternLayout
-log4perl.appender.PFFILTER.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
-log4perl.appender.PFFILTER.umask                        = 0002
-log4perl.appender.PFFILTER.user                         = pf
-log4perl.appender.PFFILTER.group                        = pf
-log4perl.appender.PFFILTER.binmode                      = utf8
+log4perl.appender.PFFILTER                                = Log::Dispatch::Syslog
+log4perl.appender.PFFILTER.ident                          = pffilter
+log4perl.appender.PFFILTER.facility                       = local5
+log4perl.appender.PFFILTER.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.PFFILTER.layout                         = PatternLayout
