--- a/conf/log.conf.d/winbindd-wrapper.conf.example
+++ b/conf/log.conf.d/winbindd-wrapper.conf.example
@@ -1,18 +1,4 @@
 ### WINBINDD_WRAPPER logger ###
-log4perl.rootLogger = INFO, WINBINDD_WRAPPER
+#log4perl.rootLogger = INFO, PFSYSLOG
 
 ### Categories ###
-# Below, you can specify different categories (based on package names) for different logging levels
-#log4perl.category.pf.SNMP = WARN
-
-### Logging for WINBINDD_WRAPPER
-log4perl.appender.WINBINDD_WRAPPER                              = Log::Log4perl::Appender::File
-log4perl.appender.WINBINDD_WRAPPER.filename                     = /usr/local/pf/logs/packetfence.log
-log4perl.appender.WINBINDD_WRAPPER.syswrite                     = 1
-log4perl.appender.WINBINDD_WRAPPER.mode                         = append
-log4perl.appender.WINBINDD_WRAPPER.layout                       = PatternLayout
-log4perl.appender.WINBINDD_WRAPPER.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
-log4perl.appender.WINBINDD_WRAPPER.umask                        = 0002
-log4perl.appender.WINBINDD_WRAPPER.user                         = pf
-log4perl.appender.WINBINDD_WRAPPER.group                        = pf
-log4perl.appender.WINBINDD_WRAPPER.binmode                      = utf8
