--- a/conf/httpd.conf.d/httpd.collector.tt.example
+++ b/conf/httpd.conf.d/httpd.collector.tt.example
@@ -130,7 +130,7 @@ MaxSpareServers  10
 HostnameLookups  off
 MaxRequestsPerChild  1000
 
-ErrorLog  [% install_dir %]/logs/[% name %].error
+ErrorLog "| /usr/bin/logger -thttpd_collector_err -plocal5.err"
 
 User pf
 Group pf
@@ -150,7 +150,7 @@ Listen [% vhost %]:[% port %]
 <VirtualHost [% vhost %]:[% port %] >
     ServerName [% server_name %]
     DocumentRoot [% install_dir %]/html/pfappserver/lib
-    ErrorLog [% install_dir %]/logs/[% name %].error
+    ErrorLog "| /usr/bin/logger -thttpd_collector_err -plocal5.err"
     <Location /mse/ >
         SetHandler modperl
         PerlResponseHandler pf::WebAPI::MSEHandler
