--- a/conf/httpd.conf.d/httpd.parking.tt.example
+++ b/conf/httpd.conf.d/httpd.parking.tt.example
@@ -126,11 +126,11 @@ DirectoryIndex index.html
 Header set X-XSS-Protection "1; mode=block"
 Header always append X-Frame-Options SAMEORIGIN
 
-ErrorLog [% install_dir %]/logs/[% name %].error
+ErrorLog "| /usr/bin/logger -thttpd_parking_err -plocal5.err"
 
 LogLevel warn
 
-CustomLog [% install_dir %]/logs/[% name %].access combined
+CustomLog  "| /usr/bin/logger -thttpd_parking -plocal5.info" combined
 
 ScriptAlias /cgi-bin/ [% install_dir %]/html/parking/cgi-bin/
 
