Tell systemd not to kill process spawned by the admin
Fixes #2121

--- a/conf/systemd/packetfence-httpd.admin.service
+++ b/conf/systemd/packetfence-httpd.admin.service
@@ -21,6 +21,7 @@ ExecStop=/bin/kill -WINCH ${MAINPID}
 # graceful stop. Normally, Systemd sends SIGTERM signal right after the
 # ExecStop, which would kill httpd. We are sending useless SIGCONT here to give
 # httpd time to finish.
+KillMode=process
 KillSignal=SIGCONT
 PrivateTmp=true
 Restart=on-failure
