--- a/conf/radiusd/auth.conf.example
+++ b/conf/radiusd/auth.conf.example
@@ -30,7 +30,7 @@ log {
 	#  The command-line option "-X" over-rides this option, and forces
 	#  logging to go to stdout.
 	#
-	destination = files
+	destination = syslog
 
 	#
 	#  Highlight important messages sent to stderr and stdout.
@@ -93,7 +93,7 @@ log {
 	#  The exact values permitted here are OS-dependent.  You probably
 	#  don't want to change this.
 	#
-	syslog_facility = daemon
+	syslog_facility = local1
 
 	#  Log the full User-Name attribute, as it was found in the request.
 	#
