--- a/debian/control
+++ b/debian/control
@@ -61,7 +61,8 @@ Depends: ${misc:Depends}, vlan,
  libnet-telnet-perl, libregexp-common-perl,libhtml-formhandler-perl (>= 0.40019),
  libreadonly-perl, libtemplate-perl, libtemplate-autofilter-perl, libterm-readkey-perl,
  libuniversal-require-perl, libthread-serialize-perl,
- libnet-ldap-perl, libcrypt-generatepassword-perl, libbytes-random-secure-perl, libcrypt-eksblowfish-perl, libcrypt-smbhash-perl, perl-doc,
+ libnet-ldap-perl, libcrypt-generatepassword-perl, libbytes-random-secure-perl, libcrypt-eksblowfish-perl, libcrypt-smbhash-perl,
+ libcrypt-cbc-perl, perl-doc,
  librrds-perl, libnetpacket-perl (>= 1.3), libcache-cache-perl, libcarp-perl,
  libload-perl, libmime-lite-tt-perl, libmime-lite-perl,
  libconfig-general-perl, libproc-processtable-perl, libperl-version-perl,
