--- a/debian/rules
+++ b/debian/rules
@@ -116,8 +116,8 @@ install: build
 #endif
 	install -d -m0700 $(CURDIR)/debian/packetfence/etc/default
 	# copy the rsyslog configuration file 
-	install -m0600 $(CURDIR)/debian/packetfence.rsyslog 
-	install -d -m0700 packetfence.rsyslog $(CURDIR)/debian/packetfence/etc/rsyslog.d/packetfence.conf
+	install -d -m0755 $(CURDIR)/debian/packetfence/etc/rsyslog.d
+	install -m0600 $(CURDIR)/debian/packetfence.rsyslog $(CURDIR)/debian/packetfence/etc/rsyslog.d/packetfence.conf
 	#Sudoer
 	install -oroot -groot -d -m0750 $(CURDIR)/debian/packetfence/etc/sudoers.d
 	install -oroot -groot -m0440 $(CURDIR)/debian/packetfence.sudoers $(CURDIR)/debian/packetfence/etc/sudoers.d/packetfence
