--- a/debian/packetfence-config.service
+++ b/debian/packetfence-config.service
@@ -1,13 +1,1 @@
-[Unit]
-Description=PacketFence Config Service
-After=network.target packetfence-redis-cache.target
-Requires=packetfence-redis-cache.service
-
-[Service]
-Type=forking
-PIDFile=/usr/local/pf/var/run/pfconfig.pid
-ExecStart=/usr/local/pf/sbin/pfconfig -d
-ExecStop=/bin/systemctl kill packetfence-config.service
-
-[Install]
-WantedBy=multi-user.target
+../conf/systemd/packetfence-config.service
