Create a wrapper script for p0f Fixes #2134

--- a/conf/systemd/packetfence-p0f.service
+++ b/conf/systemd/packetfence-p0f.service
@@ -8,7 +8,7 @@ StartLimitBurst=3
 StartLimitInterval=60
 Type=simple
 PIDFile=/usr/local/pf/var/run/p0f.pid
-ExecStart=/usr/local/bin/p0f -i any -p -f /usr/local/fingerbank/conf/fingerbank-p0f.fp -s /var/run/p0f.sock 
+ExecStart=/usr/local/pf/sbin/p0f-wrapper
 StandardOutput=null
 StandardError=null
 Restart=on-failure
