--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: packetfence
 Section: net
 Priority: optional
 Maintainer: Durand fabrice <fdurand@inverse.ca>
-Build-Depends: debhelper (>= 7.0.50~), gettext, libparse-recdescent-perl, gcc, dpkg-distribution, dh-systemd, libfile-fcntllock-perl
+Build-Depends: debhelper (>= 7.0.50~), gettext, libparse-recdescent-perl, gcc, dpkg-distribution, dh-systemd, libfile-fcntllock-perl, asciidoctor
 Standards-Version: 3.8.4
 Vcs-Git: git://github.com/inverse-inc/packetfence.git
 Vcs-browser: https://github.com/inverse-inc/packetfence/
@@ -147,7 +147,6 @@ Description: PacketFence network registration / worm mitigation system
 
 Package: packetfence-doc
 Architecture: all
-Build-Depends: asciidoctor
 Description: documentation for packetfence
  The package packetfence-doc contains the documentation files needed for the admin gui
 
