--- a/conf/systemd/packetfence-httpd.admin.service
+++ b/conf/systemd/packetfence-httpd.admin.service
@@ -2,8 +2,8 @@
 Description=PacketFence Administration  Apache HTTP Server 
 Documentation=man:httpd(8)
 Documentation=man:apachectl(8)
-Wants=packetfence-base.target packetfence-config.service packetfence-iptables.service
-After=packetfence-base.target packetfence-config.service packetfence-iptables.service packetfence-haproxy.service
+Wants=packetfence-base.target packetfence-config.service
+After=packetfence-base.target packetfence-config.service packetfence-haproxy.service
 
 [Service]
 StartLimitBurst=3
