--- a/debian/rules
+++ b/debian/rules
@@ -168,7 +168,7 @@ install: build
 	touch $(CURDIR)/debian/packetfence$(PREFIX)/$(NAME)/var/dhcpd/dhcpd.leases
 	#Documentation
 	for i in `find * -name "*.asciidoc" -path 'docs/*' -type f`; do \
-		asciidoctor -D $(CURDIR)/debian/packetfence-doc/html/pfappserver/root/static/doc -n $i; \
+		asciidoctor -D $(CURDIR)/debian/packetfence-doc/html/pfappserver/root/static/doc -n $$i; \
 	done
 # Build architecture-independent files here.
 binary-indep: build install
