--- a/debian/rules
+++ b/debian/rules
@@ -168,7 +168,7 @@ install: build
 		install -m0444 $$i $(CURDIR)/debian/packetfence-doc$(PREFIX)/$(NAME)/html/pfappserver/root/static/doc/docs/images/; \
 	done
 	#Golang binary
-	addons/packages/build-go.sh build `pwd` `pwd`/bin
+	addons/packages/build-go.sh build `pwd` $(CURDIR)/debian/packetfence-golang-daemon$(PREFIX)/$(NAME)/bin
 # Build architecture-independent files here.
 binary-indep: build install
 # We have nothing to do by default.
